[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aquant"
version = "0.0.1"
description = "Portfolio analytics for quants"
authors = [{name = "aq", email = "hello@alphaquark.in"}]
dependencies = [
    "pandas>=0.24.0",
    "numpy>=1.15.0",
    "seaborn>=0.9.0",
    "scipy>=1.2.0",
    "matplotlib>=3.0.0",
    "seaborn>=0.9.0",
    "tabulate>=0.8.0",
    "yfinance>=0.1.38",
    "scipy>=1.2.0",
    "python-dateutil>=2.0",
    "IPython",

]

[tool.setuptools]
packages = ["aquant"]

[project.urls]
Homepage = "https://github.com/pk1762012/aq_quants"